--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 requests>=2.28.0
 aiohttp>=3.8.0
-python-dateutil>=2.8.0 
+python-dateutil>=2.8.0
+
+# OpenTelemetry dependencies for observability (optional but recommended)
+opentelemetry-api>=1.36.0
+opentelemetry-sdk>=1.36.0
+opentelemetry-exporter-otlp>=1.36.0 
