--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ dependencies = [
     "opentelemetry-api>=1.36.0",
     "opentelemetry-sdk>=1.36.0",
     "opentelemetry-exporter-otlp>=1.36.0",
-    "psutil",
-    "wrapt"
+    "psutil>=5.8.0",
+    "wrapt>=1.12.0"
 ]
 
 [project.optional-dependencies]
