--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,39 @@ version = "1.0.0"
 description = "Complete AI Agent and System Monitoring SDK"
 readme = "README.md"
 requires-python = ">=3.8"
+# license = {text = "MIT"}  # TODO: Add actual license file and update this
+authors = [
+    {name = "AgentBay Team"}
+]
+keywords = [
+    "ai",
+    "agent",
+    "monitoring",
+    "observability",
+    "opentelemetry",
+    "llm",
+    "tracking",
+    "telemetry",
+    "instrumentation",
+    "langgraph",
+    "crewai",
+    "system-monitoring"
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    # "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: System :: Monitoring",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence"
+]
 dependencies = [
     "requests>=2.28.0",
     "aiohttp>=3.8.0",
@@ -18,6 +51,12 @@ dependencies = [
     "psutil>=5.8.0",
     "wrapt>=1.12.0"
 ]
+
+[project.urls]
+Homepage = "https://github.com/agentbay/agentbay-python-sdk"
+Documentation = "https://github.com/agentbay/agentbay-python-sdk#readme"
+Repository = "https://github.com/agentbay/agentbay-python-sdk"
+Issues = "https://github.com/agentbay/agentbay-python-sdk/issues"
 
 [project.optional-dependencies]
 dev = [
